--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = "MonitorLauncher"
+mainClassName = "main.java.MonitorLauncher"
+//mainClassName = "main.java.AddDevice"
 
 repositories {
     mavenCentral()
