Fixed database authentication issues.

--- a/iotmon.config
+++ b/iotmon.config
@@ -1,4 +1,5 @@
 POSTGRES_PORT=20001
 POSTGRES_IP=localhost
-POSTGRES_DB_NAME=myDB
-POSTGRES_USER=user
+POSTGRES_DB_NAME=kalki
+POSTGRES_USER=iotmon
+POSTGRES_PASSWORD=iotmon
