--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
      - "20001:5432"
     environment:
-     - POSTGRES_USER=kalki
+     - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=kalki
      - POSTGRES_DB=kalki
