--- a/iotmon.config
+++ b/iotmon.config
@@ -1,6 +1,6 @@
-POSTGRES_PORT=20001
+POSTGRES_PORT=5432
 POSTGRES_IP=localhost
-POSTGRES_DB_NAME=kalki
-POSTGRES_USER=iotmon
-POSTGRES_PASSWORD=iotmon
+POSTGRES_DB_NAME=kalkidb
+POSTGRES_USER=kalkiuser
+POSTGRES_PASSWORD=kalkipass
 MAIL_PORT=25000
