--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile name: 'huelocalsdk'
     compile name: 'huesdkresources'
     compile group: 'org.postgresql', name: 'postgresql', version:'42.2.2'
+    compile 'com.deliveredtechnologies:rulebook-core:0.8'
 //    compile name: 'tablelayout'
 }
