--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-//classpath = sourceSets.main.runtimeClasspath
 mainClassName = 'MonitorLauncher'
-
-if (project.hasProperty('chooseMain')) {
-    mainClassName = chooseMain
-}
-
 
 sourceCompatibility = 1.8
 
@@ -29,6 +23,7 @@ dependencies {
 //    compile name: 'slf4j-api-1.6.1'
 //    compile name: 'mail'
 //    compile name: 'activation'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.10.RC0'
     compile group: 'org.subethamail', name: 'subethasmtp', version: '3.1.3'
     compile 'org.json:json:20171018'
     compile group: 'edu.cmu.sei.ttg', name: 'kalki-db', version: '0.0.4-SNAPSHOT'
