--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ apply plugin: 'application'
 
 //mainClassName = 'MonitorLauncher'
 mainClassName = 'edu.cmu.sei.kalki.IotInterface'
+//mainClassName = 'edu.cmu.sei.kalki.Mail.SendMail'
+
 sourceCompatibility = 1.8
 
 repositories {
