--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile name: 'huelocalsdk'
     compile name: 'huesdkresources'
     compile 'com.jcraft:jsch:0.1.55'
+    compile 'org.apache.httpcomponents:httpclient:4.5.10'
 //    compile name: 'tablelayout'
 }
