--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "dlink_notification_email": "camera1@dlink.com",
     "iot_int_api_path": "/iot-interface-api",
     "new_device_path": "/new-device",
-    "update_device_path": "update-device",
+    "update_device_path": "/update-device",
     "send_command_path": "/send-command",
     "device_controller_api": "10.27.153.3:9090",
     "new_status_path": "/new-status",
