Final bug fixes

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "new_device_path": "/new-device",
     "update_device_path": "/update-device",
     "send_command_path": "/send-command",
-    "device_controller_api": "10.27.153.3:9090",
+    "device_controller_api": "http://10.27.153.3:9090/device-controller-api",
     "new_status_path": "/new-status",
     "new_stage_log_path": "/new-stage-log"
 }
