--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ repositories {
 
 dependencies {
     compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.19.v20190610'
-    compile group: 'org.subethamail', name: 'subethasmtp', version: '3.1.3'
-    compile 'org.json:json:20171018'
+    compile group: 'org.json', name: 'json', version: '20171018'
     compile group: 'edu.cmu.sei.ttg', name: 'kalki-db', version: '0.0.4-SNAPSHOT'
-    compile 'com.jcraft:jsch:0.1.55'
+
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
+    compile group: 'org.subethamail', name: 'subethasmtp', version: '3.1.3'
+    compile 'com.jcraft:jsch:0.1.55'
 }
