--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 
 rootProject.name = 'iot-interface'
 include ":app", ":common"
-include ":plugins/DLinkCamera"
-include ":plugins/PhilipsHueLightEmulator"
-include ":plugins/UdooNeo"
-include ":plugins/WeMoInsight"
+include ":plugins:DLinkCamera"
+include ":plugins:PhilipsHueLightEmulator"
+include ":plugins:UdooNeo"
+include ":plugins:WeMoInsight"
