--- a/plugins/WeMoInsight/script/Dockerfile
+++ b/plugins/WeMoInsight/script/Dockerfile
@@ -5,11 +5,14 @@ RUN pip install pipenv
 # Installing Python deps without a venv (not needed in container).
 COPY Pipfile /plugins/wemo/
 COPY Pipfile.lock /plugins/wemo/
+WORKDIR /plugins/wemo/
+RUN apk --no-cache add build-base && \
+    pipenv install --system --deploy --ignore-pipfile && \
+    apk del build-base
+
+# Actual code.
 COPY wemo.py /plugins/wemo/
 COPY api.py /plugins/wemo/
-
-WORKDIR /plugins/wemo/
-RUN pipenv install --system --deploy --ignore-pipfile
 
 WORKDIR /$PROJECT_NAME
 ENTRYPOINT ["pipenv", "run", "python", "wemo.py"]
