--- a/plugins/WeMoInsight/script/Dockerfile
+++ b/plugins/WeMoInsight/script/Dockerfile
@@ -10,15 +10,9 @@ RUN apk --no-cache add build-base libffi-dev  && \
     pipenv install --system --deploy --ignore-pipfile && \
     apk del build-base libffi-dev
 
-# Clear proxy.
-ENV http_proxy=""
-ENV https_proxy=""
-ENV HTTP_PROXY=""
-ENV HTTPS_PROXY=""
-
 # Actual code.
 COPY wemo.py /plugins/wemo/
 COPY api.py /plugins/wemo/
 
 WORKDIR /plugins/wemo/
-ENTRYPOINT ["python", "wemo.py"]
+ENTRYPOINT ["bash", "run.sh"]
