--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5050:5050
     depends_on:
-      - plugin-wemo
+      - kalki-iot-wemo
   kalki-iot-wemo:
     build: plugins/WeMoInsight/api/
     image: kalki/kalki-iot-wemo
