--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - 5050:5050
     depends_on:
       - kalki-iot-wemo
+    command: test wemo_poll
   kalki-iot-wemo:
     build: plugins/WeMoInsight/api/
     image: kalki/kalki-iot-wemo
