--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   kalki-iot-interface:
     image: kalki/kalki-iot-interface
+    container_name: kalki-iot-interface
     network_mode: "host"
     environment:
       - TZ=${HOST_TZ}
@@ -10,6 +11,7 @@ services:
     command: ${CMD_PARAMS}
   kalki-iot-wemo:
     image: kalki/kalki-iot-wemo
+    container_name: kalki-iot-wemo
     network_mode: "host"
     environment:
       - TZ=${HOST_TZ}
