--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ":plugins:DLinkCamera"
 include ":plugins:PhilipsHueLightEmulator"
 include ":plugins:UdooNeo"
 include ":plugins:WeMoInsight"
+include ":plugins:AmcrestIP8M2496ECamera"
