--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     depends_on:
       - kalki-iot-wemo
     command: ${CMD_PARAMS}
+    volumes:
+      - ./logs:/logs
   kalki-iot-wemo:
     image: kalki/kalki-iot-wemo
     container_name: kalki-iot-wemo
